Forms for add advert and register added

--- a/billboard_for_bands/templates/bfb_app/index.html
+++ b/billboard_for_bands/templates/bfb_app/index.html
@@ -13,5 +13,6 @@ Welcome to Billboard For Bands... Your Welcome
 {% else %}
         <P>No Adverts at present.</P>
 {% endif %}
+<a href="/bfb_app/register/">Register Here</a>
 </BODY>
 </HTML>
