--- a/billboard_for_bands/templates/bfb_app/add_advert.html
+++ b/billboard_for_bands/templates/bfb_app/add_advert.html
@@ -1,18 +1,9 @@
-<HTML>
-<HEADER><TITLE>Billboard For Bands</TITLE></HEADER>
-<BODY>
+{% extends 'bfb_app/base.html' %}
+{% block content %}
         <FORM id="add_form" method="post" action="/bfb_app/adv_add/">
                 {% csrf_token %}
-                {% for hidden in form.hidden_fields %}
-                        {{ hidden }}
-                        {% endfor %}
-
-                {% for field in form.visible_fields %}
-                        {{ field.errors }}
-                        {{ field.help_text}}
-                        {{ field }}
-                {% endfor %}
+                {{ form.as_p }}
                 <INPUT type="submit" name="submit" value="submit" />
         </FORM>
-<BODY>
-</HTML>
+<a href="http://127.0.0.1:8000/bfb_app/">Home</a>
+{% endblock %}
