--- a/billboard_for_bands/templates/bfb_app/base.html
+++ b/billboard_for_bands/templates/bfb_app/base.html
@@ -10,7 +10,7 @@
 
         <DIV>
                 <DIV id="page_header">
-                        <H1><A href="bfb_app/">Welcome to Billboard For Bands</A></H1>
+                        <H1><A href="">Welcome to Billboard For Bands</A></H1>
                         <DIV id="page_user">
                                 {% if user.is_authenticated %}
                                         Welcome {{ user.username }} |
