--- a/billboard_for_bands/templates/bfb_app/base.html
+++ b/billboard_for_bands/templates/bfb_app/base.html
@@ -10,14 +10,18 @@
 
         <DIV>
                 <DIV id="page_header">
-                        <H1><A href="">Welcome to Billboard For Bands</A></H1>
+                        <H1><A href="http://127.0.0.1:8000/bfb_app/">Welcome to Billboard For Bands</A></H1>
                         <DIV id="page_user">
-                                {% if user.is_authenticated %}
-                                        Welcome {{ user.username }} |
-                                        <A href="/bfb_app/">Logout</A>
-                                {% else %}
-                                        <A href="/bfb_app/register">Register</A> 
-                                {% endif %}
+                        <P>
+        			{% if user.is_authenticated %}
+                			Welcome {{ user.username }}  |
+                			<A href="/bfb_app/restricted/">Restricted Page</A> |
+                			<A href="/bfb_app/logout/">Logout</A>
+        			{% else %}
+                			<A href="/bfb_app/register/">Register</A> |
+                			<A href="/bfb_app/login/">Login</A>
+        			{% endif %}
+			</P>
                         </DIV>
                 </DIV>
 
