--- a/billboard_for_bands/templates/bfb_app/register.html
+++ b/billboard_for_bands/templates/bfb_app/register.html
@@ -1,15 +1,5 @@
 {% extends 'bfb_app/base.html' %}
 {% block content %}
-{% if registered %}
-        <A href="/bfb_app/">WE</A> says: thank you for registering.
-{% else %}
-        WE says: register here!
-        <FORM id="promoter_form" method="post" action="/bfb_app/register/" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{ uform.as_p }}
-                {{ pform.as_p }}
-                <INPUT type="submit" name="submit" value="submit" />
-        </FORM>
-{% endif %}
-<a href="http://127.0.0.1:8000/bfb_app/">Home</a>
+<a href="/bfb_app/register/artist">Register as Artist</a>
+<a href="/bfb_app/register/promoter">Register as Promoter</a>
 {% endblock %}
