--- a/billboard_for_bands/templates/bfb_app/registerpromoter.html
+++ b/billboard_for_bands/templates/bfb_app/registerpromoter.html
@@ -4,10 +4,9 @@
         <A href="/bfb_app/">WE</A> says: thank you for registering.
 {% else %}
         WE says: register here!
-        <FORM id="promoter_form" method="post" action="/bfb_app/register/" enctype="multipart/form-data">
+        <FORM id="promoter_form" method="post" action="/bfb_app/register/promoter/" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ uform.as_p }}
-                {{ pform.as_p }}
                 <INPUT type="submit" name="submit" value="submit" />
         </FORM>
 {% endif %}
