--- a/billboard_for_bands/templates/bfb_app/base.html
+++ b/billboard_for_bands/templates/bfb_app/base.html
@@ -68,7 +68,7 @@
 
 
 
-<FORM id="search_form" method="post" action="/rango/search/">
+<FORM id="search_form" method="post" action="/bfb_app/search/">
         {% csrf_token %}
         Search:
         <INPUT type="text" size="20" name="query" value="" id="query">
