--- a/billboard_for_bands/templates/bfb_app/add_advert.html
+++ b/billboard_for_bands/templates/bfb_app/add_advert.html
@@ -1,9 +1,10 @@
 {% extends 'bfb_app/base.html' %}
 {% block content %}
-        <FORM id="add_form" method="post" action="/bfb_app/adv_add/">
+        <FONT COLOR="white"><FORM id="add_form" method="post" action="/bfb_app/adv_add/">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <INPUT type="submit" name="submit" value="submit" />
         </FORM>
+	</FONT>
 <a href="http://127.0.0.1:8000/bfb_app/">Home</a>
 {% endblock %}
