changed base.html to include bootstrap and boostrap stylings

--- a/billboard_for_bands/static/css/basic/mainstyle.css
+++ b/billboard_for_bands/static/css/basic/mainstyle.css
@@ -36,6 +36,11 @@ text-align: center;
 	left:1190px;
 }
 
+#registerDropdown{
+	position:fixed;
+	top:35px;
+	left:1190px;
+}
 
 #search_form{
 	position:fixed;
