--- a/billboard_for_bands/templates/bfb_app/index.html
+++ b/billboard_for_bands/templates/bfb_app/index.html
@@ -26,3 +26,4 @@
 {% block footer %}
 <FONT COLOR="white">About - This is where we tell you about it app. Yes, its awesome</FONT>
 {% endblock%}
+</html>
