--- a/billboard_for_bands/templates/bfb_app/base.html
+++ b/billboard_for_bands/templates/bfb_app/base.html
@@ -106,6 +106,11 @@
 </FORM>
 
 		<script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
+		<script src="{{ STATIC_URL }}backstretch.js"></script>
+		<script type="text/javascript">
+		$.backstretch("{{ STATIC_URL }}imgs/background_1.jpg");
+		</script>
+
 
 </BODY>
 </HTML>
