updated pages masssively etc etc

--- a/billboard_for_bands/static/css/basic/mainstyle.css
+++ b/billboard_for_bands/static/css/basic/mainstyle.css
@@ -6,8 +6,6 @@ body {
 	background-image:url("subtle_carbon_75_transparent.png") repeat 0 0;
 }
 
-p {color:#f9f9f9; }
-
 h2 {color: #f9f9f9; }
 
 h3 {
@@ -15,6 +13,13 @@ h3 {
 	color: #f9f9f9;
 }
 
+.btn-toolbar {
+	margin-top:0;
+	margin-bottom:0;
+}
+.table {
+	background-color: #f9f9f9;
+}
 
 /* Custom container */
 .container-narrow {
@@ -42,10 +47,13 @@ text-align: center;
         border-radius: 0px 0px 15px 15px;
    margin: 0px auto;
    padding: 5px 5px 5px 10px ;
-        position:center;/* You can also use position: absolute; */
-       
-        
-        
+        position:center;/* You can also use position: absolute; */    
+}
+
+#reviewbtn{
+	position: absolute;
+	top:285px;
+	left:290px;
 }
 /*
 #showloginbutton{
