--- a/billboard_for_bands/templates/bfb_app/index.html
+++ b/billboard_for_bands/templates/bfb_app/index.html
@@ -11,7 +11,7 @@
             <li><a href="/bfb_app/browse">Browse</a></li>
         </ul>
 		<form class="navbar-form pull-right">
-	      	<input type="text" class="search-query span3" id="searchPlease" placeholder="Advert or Venue">
+	      	
 			{% if user.is_authenticated %}
 			Welcome {{ user.username }}  |
 			<a href="/bfb_app/logout/"> Logout </a>
@@ -36,13 +36,13 @@
 {% if ad_list %}
 
 <h2>Upcoming Gigs</h2>
-<table class="table table-striped" id="gigtable">
+<table class="table" id="gigtable">
 <thead>
 	<tr>  
-	<th><font color="f9f9f9">Venue</th></font> 
-	<th><font color="f9f9f9">Artist</th></font>  
-	<th><font color="f9f9f9">Date</th></font>
-	<th><font color="f9f9f9">No. of Applicants</th></font>     
+	<th>Venue</th> 
+	<th>Artist</th>
+	<th>Date</th>
+	<th>No. of Applicants</th>
 	</tr>  
 </thead>
   
