--- a/billboard_for_bands/templates/bfb_app/artistHome.html
+++ b/billboard_for_bands/templates/bfb_app/artistHome.html
@@ -52,7 +52,7 @@
 		<td>{{ad.venue}}</td>
 		<td>{{ad.band}}</td>
 		<td>{{ad.date}}</td>
-		<td>{{ad.artist.count}}</td>
+		<td id="{{ad.pk}}_count">{{ad.artist.count}}</td>
 		<td>{{ad.status}}</td>
 		<td>
 		{% if ad in applied_list %}
@@ -76,7 +76,15 @@
 <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript">
 function apply_click(click_id) {
-	
+
+	if ($("#"+click_id).attr("class") == "btn btn-primary") { 
+		$("#"+click_id).attr("class","btn btn-danger");
+		$("#"+click_id).text("Withdraw");
+	}
+	else {
+		$("#"+click_id).attr("class","btn btn-primary");
+		$("#"+click_id).text("Apply");
+	}
 	var id_json = {'advertID': click_id};
 	$.ajax({
     	url: '/bfb_app/process',
@@ -85,17 +93,10 @@ function apply_click(click_id) {
     	data: JSON.stringify(id_json),
     	dataType: 'text', 
     	success: function(result) {
-			if ($("#"+click_id).attr("value") == "Apply") { 
-				$("#"+click_id).attr("class","btn btn-danger");
-				$("#"+click_id).text("Withdraw");
-			}
-			else {
-				$("#'click_id'").attr("class","btn btn-primary");
-				$("#'click_id'").text("Apply");
-			}
+	
    	 	}
-		
 	});	
+
 }
 </script>
 {% endblock %}
