--- a/billboard_for_bands/templates/bfb_app/appliedGigs.html
+++ b/billboard_for_bands/templates/bfb_app/appliedGigs.html
@@ -41,6 +41,7 @@
 	<th>Artist</th>
 	<th>Date</th>
 	<th>No. of Applicants</th>
+	<th>Withdraw Application</th>
 	</tr>  
 </thead>
   
@@ -51,17 +52,37 @@
 	<td>{{ad.band}}</td>
 	<td>{{ad.date}}</td>
 	<td>{{ad.artist.count}}</td>
+	<td>
+		<div class="btn-toolbar">
+			<button class="btn btn-danger" id="{{ad.pk}}" onclick="apply_click(this.id)" type="button">Withdraw</button>
+		</div>
+	</td>
 	<tr>
 	{% endfor %}
 </table>
 {% else %}
         <h3>No Adverts at present.</h3>
 {% endif %}
-{% endblock %}
 
-<div id="about">
-<p>
-</font>
-</p>
-</div>
+<script type="text/javascript" src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
+<script type="text/javascript">
+function apply_click(click_id) {
+	$("#"+click_id).attr("onclick","#");
+	$("#"+click_id).attr("disabled", "disabled");
+	
+	var id_json = {'advertID': click_id};
+	$.ajax({
+    	url: '/bfb_app/process',
+    	type: "POST",
+    	contentType: 'application/json; charset=utf-8',
+    	data: JSON.stringify(id_json),
+    	dataType: 'text', 
+    	success: function(result) {
+	
+   	 	}
+		
+	});	
+}
+</script>
+{% endblock %}
