--- a/billboard_for_bands/templates/bfb_app/appliedGigs.html
+++ b/billboard_for_bands/templates/bfb_app/appliedGigs.html
@@ -4,84 +4,83 @@
     <div class="navbar-inner" style="-webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; overflow:hidden; top=100px;">
     <div class="container">
 	<div class="span12">
-		<ul class="nav">
-        	<li><a href="/bfb_app/ArtistHome">Home</a></li>
-            <li><a href="/bfb_app/artistBrowse">Browse</a></li>
-			<li><a href="/bfb_app/ArtistProfile">View Profile</a></li>
-			<li class="active"><a href="/bfb_app/appliedGigs">Applied Gigs</a></li>
-        </ul>
-		<form class="navbar-form pull-right">
+	    <ul class="nav">
+                <li><a href="/bfb_app/ArtistHome">Home</a></li>
+                <li><a href="/bfb_app/artistBrowse">Browse</a></li>
+		<li><a href="/bfb_app/ArtistProfile">View Profile</a></li>
+		<li class="active"><a href="/bfb_app/appliedGigs">Applied Gigs</a></li>
+            </ul>
+	    <form class="navbar-form pull-right">
 	      	
-			{% if user.is_authenticated %}
-			Welcome {{ user.username }}  |
-			<a href="/bfb_app/logout/"> Logout </a>
-			{% else %}
-			<div class="btn-group">
-				<a class="btn dropdown-toggle" data-toggle="dropdown" id="registerbutton" href="#">Register <span class="caret"></span>
-				</a>
-				<ul class="dropdown-menu" id="registerDropdown">
-					<li><A href="/bfb_app/register/artist">Artist</A><li>
-					<li><A href="/bfb_app/register/promoter">Promoter</A><li>
-				</ul>
-				<A href="/bfb_app/login/"><button class="btn" type="button" id="showloginbutton" onclick ="this.style.visibility= 'hidden';">Login</button></A>
-			</div>
-			{% endif %}
-		</form>
+	    {% if user.is_authenticated %}
+	        Welcome {{ user.username }}  |
+		<a href="/bfb_app/logout/"> Logout </a>
+	    {% else %}
+		<div class="btn-group">
+		    <a class="btn dropdown-toggle" data-toggle="dropdown" id="registerbutton" href="#">Register <span class="caret"></span>
+		    </a>
+		    <ul class="dropdown-menu" id="registerDropdown">
+		        <li><A href="/bfb_app/register/artist">Artist</A><li>
+		        <li><A href="/bfb_app/register/promoter">Promoter</A><li>
+		    </ul>
+		    <A href="/bfb_app/login/"><button class="btn" type="button" id="showloginbutton" onclick ="this.style.visibility= 'hidden';">Login</button></A>
+		</div>
+	    {% endif %}
+	    </form>
 	</div>
     </div>
     </div>
 </div><!-- /.navbar -->
+
 {% if ad_list %}
 
 <h2>Applied gigs</h2>
 <table class="table" id="gigtable">
 <thead>
-	<tr>  
-	<th>Venue</th>
-	<th>Artist</th>
-	<th>Date</th>
-	<th>No. of Applicants</th>
-	<th>Withdraw Application</th>
-	</tr>  
+    <tr>  
+        <th>Venue</th>
+        <th>Artist</th>
+        <th>Date</th>
+        <th>No. of Applicants</th>
+        <th>Withdraw Application</th>
+    </tr>  
 </thead>
-  
 <tbody>
-	{% for ad in ad_list %}
-	<tr>
+    {% for ad in ad_list %}
+    <tr id="{{ad.pk}}tr">
 	<td>{{ad.venue}}</td>
 	<td>{{ad.band}}</td>
 	<td>{{ad.date}}</td>
 	<td>{{ad.artist.count}}</td>
 	<td>
-		<div class="btn-toolbar">
-			<button class="btn btn-danger" id="{{ad.pk}}" onclick="apply_click(this.id)" type="button">Withdraw</button>
-		</div>
+            <div class="btn-toolbar">
+	        <button class="btn btn-danger" id="{{ad.pk}}" onclick="apply_click(this.id)" type="button">Withdraw</button>
+	    </div>
 	</td>
-	<tr>
-	{% endfor %}
+    <tr>
+    {% endfor %}
 </table>
 {% else %}
-        <h3>No Adverts at present.</h3>
+    <h3>No Adverts at present.</h3>
 {% endif %}
 
 <script type="text/javascript" src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript">
 function apply_click(click_id) {
-	$("#"+click_id).attr("onclick","#");
-	$("#"+click_id).attr("disabled", "disabled");
 	
 	var id_json = {'advertID': click_id};
 	$.ajax({
-    	url: '/bfb_app/process',
-    	type: "POST",
-    	contentType: 'application/json; charset=utf-8',
-    	data: JSON.stringify(id_json),
-    	dataType: 'text', 
-    	success: function(result) {
-	
-   	 	}
-		
+    	    url: '/bfb_app/process',
+    	    type: "POST",
+    	    contentType: 'application/json; charset=utf-8',
+    	    data: JSON.stringify(id_json),
+    	    dataType: 'text', 
+    	    success: function(result) {
+                $("#"+click_id+"tr").remove();
+	        $("#"+click_id).attr("onclick","#");
+	        $("#"+click_id).attr("disabled", "disabled");
+   	    }
 	});	
 }
 </script>
