--- a/billboard_for_bands/templates/bfb_app/artistBrowse.html
+++ b/billboard_for_bands/templates/bfb_app/artistBrowse.html
@@ -4,29 +4,29 @@
     <div class="navbar-inner" style="-webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; overflow:hidden; top=100px;">
     <div class="container">
 	<div class="span12">
-		<ul class="nav">
-        	<li><a href="/bfb_app/ArtistHome">Home</a></li>
-            <li class="active"><a href="/bfb_app/artistBrowse">Browse</a></li>
-			<li><a href="/bfb_app/ArtistProfile">Your Profile</a></li>
-			<li><a href="/bfb_app/appliedGigs">Applied Gigs</a></li>
-        </ul>
-		<form class="navbar-form pull-right">
-	      	
-			{% if user.is_authenticated %}
-			Welcome {{ user.username }}  |
-			<a href="/bfb_app/logout/"> Logout </a>
-			{% else %}
-			<div class="btn-group">
-				<a class="btn dropdown-toggle" data-toggle="dropdown" id="registerbutton" href="#">Register <span class="caret"></span>
-				</a>
-				<ul class="dropdown-menu" id="registerDropdown">
-					<li><A href="/bfb_app/register/artist">Artist</A><li>
-					<li><A href="/bfb_app/register/promoter">Promoter</A><li>
-				</ul>
-				<A href="/bfb_app/login/"><button class="btn" type="button" id="showloginbutton" onclick ="this.style.visibility= 'hidden';">Login</button></A>
-			</div>
-			{% endif %}
-		</form>
+	    <ul class="nav">
+                <li><a href="/bfb_app/ArtistHome">Home</a></li>
+                <li class="active"><a href="/bfb_app/artistBrowse">Browse</a></li>
+		<li><a href="/bfb_app/ArtistProfile">Your Profile</a></li>
+		<li><a href="/bfb_app/appliedGigs">Applied Gigs</a></li>
+            </ul>
+	    <form class="navbar-form pull-right">
+	     	
+	    {% if user.is_authenticated %}
+	        Welcome {{ user.username }}  |
+		<a href="/bfb_app/logout/"> Logout </a>
+	    {% else %}
+	        <div class="btn-group">
+		    <a class="btn dropdown-toggle" data-toggle="dropdown" id="registerbutton" href="#">Register <span class="caret"></span>
+		    </a>
+		    <ul class="dropdown-menu" id="registerDropdown">
+		        <li><A href="/bfb_app/register/artist">Artist</A><li>
+		        <li><A href="/bfb_app/register/promoter">Promoter</A><li>
+		    </ul>
+		    <A href="/bfb_app/login/"><button class="btn" type="button" id="showloginbutton" onclick ="this.style.visibility= 'hidden';">Login</button></A>
+		</div>
+	    {% endif %}
+	    </form>
 	</div>
     </div>
     </div>
@@ -34,7 +34,7 @@
 {% if ad_list %}
 
 <h2>All gigs</h2>
-<<table class="table" id="gigtable">
+<table class="table" id="gigtable">
 <thead>
 	<tr>  
 	<th>Venue</th>
@@ -52,7 +52,7 @@
 		<td>{{ad.venue}}</td>
 		<td>{{ad.band}}</td>
 		<td>{{ad.date}}</td>
-		<td>{{ad.artist.count}}</td>
+		<td id="{{ad.pk}}count">{{ad.artist.count}}</td>
 		<td>{{ad.status}}</td>
 		<td>
 		{% if ad in applied_list %}
@@ -75,24 +75,24 @@
 <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript">
 function apply_click(click_id) {
-	if ($("#"+click_id).attr("class") == "btn btn-primary") { 
-		$("#"+click_id).attr("class","btn btn-danger");
-		$("#"+click_id).text("Withdraw");
-	}
-	else {
-		$("#"+click_id).attr("class","btn btn-primary");
-		$("#"+click_id).text("Apply");
-	}
 	var id_json = {'advertID': click_id};
 	$.ajax({
-    	url: '/bfb_app/process',
-    	type: "POST",
-    	contentType: 'application/json; charset=utf-8',
-    	data: JSON.stringify(id_json),
-    	dataType: 'text', 
-    	success: function(result) {
-	
-   	 	}
+    	    url: '/bfb_app/process',
+    	    type: "POST",
+    	    contentType: 'application/json; charset=utf-8',
+    	    data: JSON.stringify(id_json),
+    	    dataType: 'text', 
+    	    success: function(result) {
+                // toggles button action
+	        if ($("#"+click_id).attr("class") == "btn btn-primary") { 
+		    $("#"+click_id).attr("class","btn btn-danger");
+		    $("#"+click_id).text("Withdraw");
+	        }
+	        else {
+	            $("#"+click_id).attr("class","btn btn-primary");
+		    $("#"+click_id).text("Apply");
+	        }
+   	    }
 		
 	});	
 }
