--- a/billboard_for_bands/templates/bfb_app/base.html
+++ b/billboard_for_bands/templates/bfb_app/base.html
@@ -7,43 +7,42 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Le styles -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 	<link href="{{ STATIC_URL}}bootstrap/css/bootstrap.css" rel="stylesheet">
 	<HTML xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 	
 
 <HEADER>
-	<!--Link to css that defines layout for everypage-->
-	<LINK href="{{ STATIC_URL}}css/basic/mainstyle.css" rel="stylesheet" title="basicstyle" type="text/css" />
-
-    <META http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <TITLE>Billboard for Bands</TITLE>
+<!--Link to css that defines layout for everypage-->
+<LINK href="{{ STATIC_URL}}css/basic/mainstyle.css" rel="stylesheet" title="basicstyle" type="text/css" />
+<META http-equiv="Content-type" content="text/html; charset=utf-8" />
+<TITLE>Billboard for Bands</TITLE>
 </HEADER>
 <BODY>
 <div class="container-narrow">
-	<div id="page_header">
-    	<H1 id="mainHeader">Billboard For Bands</A></H1> <!-- removed <A href="http://127.0.0.1:8000/bfb_app/"> -->
-	</div>
+    <div id="page_header">
+    <H1 id="mainHeader">Billboard For Bands</A></H1> <!-- removed <A href="http://127.0.0.1:8000/bfb_app/"> -->
+</div>
 			
-	<div style="clear:both; margin: 0 0 30px 0;">&nbsp;</div>
+<div style="clear:both; margin: 0 0 30px 0;">&nbsp;</div>
+    <DIV id="page_content">
+    {% block content %}{% endblock %}
+    </DIV>
 
-                <DIV id="page_content">
-                        {% block content %}{% endblock %}
-                </DIV>
-
-                <DIV id="page_footer">
-                        {% block footer %}{% endblock %}
-                </DIV>
+    <DIV id="page_footer">
+    {% block footer %}{% endblock %}
+    </DIV>
 
     <DIV>	
-		<script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
-		<script src="{{ STATIC_URL }}backstretch.js"></script>
-		<script type="text/javascript">
-		$.backstretch("{{ STATIC_URL }}imgs/background_1.jpg");
-		</script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
+    <script src="{{ STATIC_URL }}backstretch.js"></script>
+    <script type="text/javascript">
+        // set responsive background
+        $.backstretch("{{ STATIC_URL }}imgs/background_1.jpg");
+    </script>
 
 </div>
 </BODY>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 </HTML>
